spacing issues with the p

--- a/css/main.css
+++ b/css/main.css
@@ -53,12 +53,12 @@ body {
 
 .image-wrapper h1 {
   position: absolute;
-	top: 10%;
+	top: 38%;
 	padding: 0.1rem;
 	width: 100%;
 	color: #FF7171;
 	text-align: center;
-	font-size: 50px;
+	font-size: 40px;
 }
 
 .image-wrapper h2 {
@@ -84,22 +84,11 @@ body {
 
 p {
   font-size: 14px;
-  margin-left: .85rem;
-  margin-right: .85rem;
+  margin-left: 2rem;
+  margin-right: 2rem;
   color: white;
-  text-align: left;
-  margin-top: 1rem;
-}
-
-.firstcharacter {
-  float: left;
-  color: #FF7171;
-  font-size: 72px;
-  line-height: 60px;
-  padding-top: 0;
-  padding-right: 8px;
-  padding-left: 3px;
-  font-family: Georgia;
+  text-align: center;;
+  margin-top: 4.5rem;
 }
 
 footer a {
